# erdos-273

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  STATUS.md  pyproject.toml
.claude/agents/: algebraist.md  analyst.md  combinatorialist.md  complexity-theorist.md  computationalist.md  critic.md  formalist.md  geometer.md  librarian.md  probabilist.md  sieve-theorist.md  topologist.md
.claude/skills/polish/: SKILL.md
.claude/skills/solve/: SKILL.md
.claude/skills/vector/: SKILL.md
findings/: INDEX.md  decision-halt-2026-05-29.md  decision-strictness-2026-05-28.md  heur-cft-Mbound-2026-05-28.md  heur-cft-hyperplane-2026-05-28.md  heur-density-scan-2026-05-28.md  heur-sat-2026-05-28.md  lit-V2-divisibility-2026-05-28.md  lit-V3-hough-2026-05-28.md  lit-covering-2026-05-28.md  polish-audit-2026-05-29.md  review-83160-2026-05-28.md  review-density-bound-2026-05-28.md  review-integerform-2026-05-28.md  review-polish-2026-05-29.md
formal/: .gitignore  Erdos273.lean  Formalia.lean  lake-manifest.json  lakefile.toml
formal/Erdos273/: CoveringSystem.lean  DensityDivergence.lean  IntegerForm.lean  Main.lean  NumericalBound180180.lean  NumericalBound27720.lean  NumericalBound83160.lean
formal/numerics/: cft_M_heuristic.py  cft_M_hyperplane.py  cft_delta_optimization.py  cft_validate_squarefree.py  density_prime_tail.py  density_scan.py  density_smallest_geq1.py  sat_covering.py
manuscript/: proof.tex
scripts/: init.py
